--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "backend/server.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node backend/server.js",
-    "dev": "nodemon backend/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +27,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "overlay-navbar": "^1.2.3",
+    "stripe": "^17.5.0",
     "validator": "^13.11.0",
     "webfontloader": "^1.6.28"
   }
